objects/Standing_Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Committee__c</fullName>
        <label>Committee</label>
        <referenceTo>Committee__c</referenceTo>
        <relationshipLabel>Standing Agenda</relationshipLabel>
        <relationshipName>Default_Agenda</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Default_Agenda</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Standing Agenda</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standing Agenda</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>